
module(
    name = "rules_roborio_toolchain",
    version = "2021-1",
    compatibility_level = 2021,
)

bazel_dep(name = "platforms", version = "0.0.4")

deps = use_extension("//:maven_deps.bzl", "deps")
use_repo(
    deps,
    "bazelrio_roborio_toolchain_macos",
    "linux",
    "windows",
)

sh_configure = use_extension("@rules_roborio_toolchain//:extensions.bzl", "sh_configure")
use_repo(sh_configure, "local_roborio")

#register_toolchains("@rules_roborio_toolchain//toolchains:macos")
#register_toolchains("@rules_roborio_toolchain//toolchains:linux")
register_toolchains("@local_roborio//:windows")
register_toolchains("@local_roborio//:linux")