
module(
    name = "rules_roborio_toolchain",
    version = "2021-1",
    compatibility_level = 2021,
)

bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.2")

deps = use_extension("//:maven_deps.bzl", "deps")
use_repo(
    deps,
    "roborio-compiler-macos",
    "roborio-compiler-linux",
    "roborio-compiler-windows",
)

sh_configure = use_extension("@rules_roborio_toolchain//:extensions.bzl", "sh_configure")
use_repo(sh_configure, "local_roborio")

register_toolchains("@local_roborio//:cc-toolchain-roborio")