
py_library(
    name = "get_toolchain_dependencies",
    srcs = ["get_toolchain_dependencies.py"],
    deps = ["@bzlmodrio-gentool//bazelrio_gentool"],
    visibility = ["//visibility:public"]
)

py_binary(
    name = "generate_toolchain_deps",
    srcs = ["generate_toolchain_deps.py"],
    deps = ["@bzlmodrio-gentool//bazelrio_gentool", ":get_toolchain_dependencies"],
    visibility = ["//visibility:public"]
)

py_binary(
    name = "publish_roborio_toolchain",
    srcs = ["publish_roborio_toolchain.py"],
    deps = ["@bzlmodrio-gentool//bazelrio_gentool", ":get_toolchain_dependencies"],
    visibility = ["//visibility:public"]
)